SERVER-57446 fix clang-tidy header issues and add header-filter

GitOrigin-RevId: 9928da862ab56b04346abbc0cc2c2891ddbb0f2e